--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".OverviewActivity">
-        </activity>
-        <activity android:name=".QuestionActivity">
-        </activity>
-        <activity android:name=".AnswerActivity">
+        <activity android:name=".QuizActivity">
         </activity>
     </application>
 
