--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="edu.us.ischool.dlangner.quizdroid">
 
     <application
+            android:name=".QuizApp"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
@@ -19,5 +20,4 @@
         <activity android:name=".QuizActivity">
         </activity>
     </application>
-
 </manifest>
