--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,5 +19,8 @@
         </activity>
         <activity android:name="activities.QuizActivity">
         </activity>
+        <activity android:name="activities.PreferencesActivity">
+        </activity>
+
     </application>
 </manifest>
