--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+            android:theme="@style/AppTheme">
         <activity android:name="activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -19,7 +19,11 @@
         </activity>
         <activity android:name="activities.QuizActivity">
         </activity>
-        <activity android:name="activities.PreferencesActivity">
+        <activity
+            android:name="activities.PreferencesActivity"
+            android:label="preferences"
+            android:parentActivityName="activities.MainActivity"
+        >
         </activity>
 
     </application>
